[package]
name = "bevy-test-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
bevy_editor_pls = "0.8.1"
bevy_rand = { version = "0.6.0", features = ["wyrand"] }
bevy_rapier2d = { version = "0.26.0", features = ["simd-stable", "debug-render-2d"] }
rand_core = "0.6.4"

